--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       Ci kolejne kroki, a także pomoże ustalić dogodny termin i godzinę spotkania online.
     </div>
 
-    <form action="">
+    <form action="" onsubmit="return(validateForm())">
       <input type="text" name="name" id="name" placeholder="Imię *">
       <input type="text" name="lastname" id="lastname" placeholder="Nazwisko *">
 
