form validation alert

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
         <a href="#" class="data-info">Informacje nt. przetwarzania danych.</a>
         <p class="data-claimer">* Pola obowiązkowe</p>
       </div>
+      <div class="alert-wrap">
+        <div class="alert-box">Uzupełnij wszystkie pola!</div>
+      </div>
       <input type="submit" value="Wyślij">
     </form>
   </div>
