--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
       <!-- Custom select dropdown -->
       <div class="dropdown">
         <div class="select">
-          <span class="selected">Polska (+48)</span>
-          <div class="arrow"></div>
+          <span class="selected">Polska (+48)<i class="arrow down"></i></span>
         </div>
         <ul class="dropdown-list">
           <li>Polska (+48)</li>
